--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,14 +5,16 @@
 }
 
 #app-header{
-    background-color: rgb(172, 235, 214);
-    padding: 1rem;
+    background-image: url(/assets/img/jumbo.png);
+    background-size: cover;
+
 }
 
 .container {
     margin: auto;
     width: 70%;
     padding: 2rem;
+    max-width: 1140px;
 }
 
 .flex{
@@ -20,66 +22,165 @@
 }
 
 
-.logo{
-    background-color: orange;
-    width: 25%;
-    border: 2px dashed black;
+.logo {
+    flex-grow: 6;
+    
 }
 
-nav{
-    background-color: orange;
-    width: 50%;
-    border: 2px dashed black;
+.title-speak {
+    color: white;
+    text-align: center;
+    font-size: 50px;
+    margin-bottom: 30px;
 }
 
-.login{
-    background-color: orange;
-    width: 25%;
-    border: 2px dashed black;
+.p-space {
+    color: white;
+    font-size: 25px;
+    text-align: center;
+          
 }
+
+nav {
+    flex-grow: 2;
+}
+
+nav a {
+    text-decoration: none;
+    color: white;
+    margin: 15px;
+}
+
+.login {
+    flex-grow: 2;
+
+}
+
+.sign-in {
+    background-color: white;
+    border-radius: 15px;
+    height: 25px;
+    width: 60px;
+    border: none;
+}
+
+.btn-discord{
+    margin-left: 300px;
+    margin-top: 25px;
+}
+
+.btn-mac {
+    background-color: white;
+    height: 44px;
+    width: 145px;
+    border-radius: 26px;
+    text-align: center;
+    border: none;
+
+}
+
+.btn-broswer {
+    background-color: black;
+    color: white;
+    height: 44px;
+    width: 210px;
+    border-radius: 26px;
+    text-align: center;
+    border: none;
+}
+
+.image-row img {
+    width: 500px;
+    
+}
+
 
 
 
 .column {
-   background-color: blue;
-   padding: 2rem;
-
+   padding: 2rem
 
 }
 
 .col {
-    background-color: pink;
+
     margin-left: 300px;
     margin-right: 300px;
-    height: 400px;
-    border: 2px dashed black;
+    height: 400px;;
+    display: flex;
 }
 
 
 
-.row-text{
-    background-color: rgb(64, 134, 238);
+.row-text {
     width: 60%;
     height: 400px;
-    border: 2px dashed black;
+    
+}
+
+.text-page{
+    padding-top: 45px;
+    text-align: inherit;
+}
+
+.title-page{
+    font-size: 20px;
+}
+
+.p-page{
+    font-size: 12px;
+}
+
+.easy-meetings{
+    background-color: #f6f6f6;
+}
+
+
+.big-col {
+    width: 100%;
+    text-align: center;
 }
 
 .image-row{
-    background-color: plum;
-    width: 40%;
-    border: 2px dashed black;
-}
-
-.big-col {
-    background-color: green;
-    width: 100%;
-    height: 800px;
-    border: 2px dashed black;
+    margin-left: 200px;
 }
 
 .section-col{
-    background-color: lightgrey;
+    background-color: #f6f6f6; 
 }
+
+.title-ready{
+    text-align: center;
+}
+
+.btn-down-mac{
+    margin-left: 430px;
+    padding-top: 40px;
+}
+
+
+
+
+.btn-download{
+    background-color: #8ea1e1;
+    color: white;
+    height: 44px;
+    width: 145px;
+    border-radius: 26px;
+    text-align: center;
+    border: none;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 .section-footer{
     background-color: black;
