--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: Whitney, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+}
+
 #app-header{
     background-image: url(/assets/img/jumbo.png);
     background-size: cover;
@@ -115,7 +120,7 @@ nav a {
 .row-text {
     width: 60%;
     height: 400px;
-    
+
 }
 
 .text-page{
@@ -149,6 +154,17 @@ nav a {
     background-color: #f6f6f6; 
 }
 
+.section-col::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 150px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .title-ready{
     text-align: center;
 }
@@ -158,6 +174,16 @@ nav a {
     padding-top: 40px;
 }
 
+
+.services{
+    color: #5b6da9;
+}
+
+ul li {
+    color: white;
+    list-style: none;
+    padding-top: 15px;
+}
 
 
 
@@ -171,7 +197,20 @@ nav a {
     border: none;
 }
 
+.talk-place{
+    font-size: 25px;
+    color: #5b6da9;
+}
 
+.logo-ita {
+    width: 30px;
+    padding-top: 30px;
+}
+
+.nation{
+    color: white;
+    font-size: 10px;
+}
 
 
 
@@ -183,23 +222,22 @@ nav a {
 
 
 .section-footer{
-    background-color: black;
+    background-color: #23272a;
 }
 
 .top {
-    background-color: orange;
+
     height: 400px;
-    border: 2px dashed black;
+    
 }
 
 .talk{
-    background-color: aqua;
-    width: 50%;
+    width: 35%;
 }
 
 .item{
     width: calc(100% /4);
-    border: 2px dashed black;
+   
 
 }
 
@@ -215,7 +253,7 @@ nav a {
 }
 
 .bg-aquamarine {
-    background-color: aquamarine;
+    
 }
 
 .full-width {
@@ -224,12 +262,17 @@ nav a {
 
 .image-footer{
     width: 20%;
-    background-color: plum;
-    border: 2px dashed black;
+
 }
 
-.button-register{
+.button-register {
     width: 20%;
-    background-color: plum;
-    border: 2px dashed black;
+    background-color:#8ea1e1;
+    height: 44px;
+    width: 145px;
+    border-radius: 26px;
+    text-align: center;
+    border: none;
+    color: white;
+
 }
