fix image-social nel footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,8 +212,14 @@ ul li {
     font-size: 10px;
 }
 
+.stars{
+    margin-left: 240px;
+}
 
-
+.image-social{
+    color: white;
+    padding-top: 15px;
+}
 
 
 
